--- a/app/ui5freestyle/webapp/view/Object.view.xml
+++ b/app/ui5freestyle/webapp/view/Object.view.xml
@@ -2,67 +2,147 @@
     controllerName="ui5freestyle.controller.Object"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns:semantic="sap.f.semantic">
-
+    xmlns:semantic="sap.f.semantic"
+>
     <semantic:SemanticPage
         id="page"
         headerPinnable="false"
         toggleHeaderOnTitleClick="false"
         busy="{objectView>/busy}"
-        busyIndicatorDelay="{objectView>/delay}">
-
+        busyIndicatorDelay="{objectView>/delay}"
+    >
         <semantic:titleHeading>
             <Title
                 text="{Name}"
-                level="H2"/>
+                level="H2"
+            />
         </semantic:titleHeading>
-
         <semantic:headerContent>
-            <ObjectNumber
-                unit="{ID}" />
+            <ObjectNumber unit="{ID}" />
         </semantic:headerContent>
-
         <semantic:sendEmailAction>
-            <semantic:SendEmailAction id="shareEmail" press=".onShareEmailPress"/>
+            <semantic:SendEmailAction
+                id="shareEmail"
+                press=".onShareEmailPress"
+            />
         </semantic:sendEmailAction>
-        <Table
-        id="tableCup"
-        width="auto"
-        items="{
-            path: 'in_Cup',
-            sorter: {
-                path: 'ID',
-                descending: false
-            }
-        }"
-        noDataText="{worklistView>/tableNoDataText}"
-        busyIndicatorDelay="{worklistView>/tableBusyDelay}"
-        growing="true"
-        growingScrollToLoad="true"
-        updateFinished=".onUpdateFinished">
-        <columns>
-            <Column id="nameColumn">
-                <Text text="{i18n>tableNameColumnTitle}" id="nameColumnTitle"/>
-            </Column>
-            <Column id="unitNumberColumn" hAlign="End">
-                <Text text="{i18n>tableUnitNumberColumnTitle}" id="unitNumberColumnTitle"/>
-            </Column>
-        </columns>
-
-        <items>
-            <ColumnListItem>
-                <cells>
-                    <ObjectIdentifier
-                        title="{ID}"/>
-                    <Link
-                        text="{to_Cup_ID}"
-                        press=".onNav"
-                     />
-
-                </cells>
-            </ColumnListItem>
-        </items>
-    </Table>
+        <VBox>
+            <items>
+                <Panel
+                    class="sapUiResponsiveMargin"
+                    width="auto"
+                    expanded="true"
+                    headerText="Liquid"
+                >
+                    <content>
+                        <Table
+                            id="tableLiquid"
+                            width="auto"
+                            items="{
+                                path: 'has_Liquid',
+                                sorter: {
+                                    path: 'ID',
+                                    descending: false
+                                }
+                            }"
+                            noDataText="{worklistView>/tableNoDataText}"
+                            busyIndicatorDelay="{worklistView>/tableBusyDelay}"
+                            growing="true"
+                            growingThreshold="20"
+                            growingScrollToLoad="false"
+                        >
+                            <OverflowToolbar>
+                                <content>
+                                    <Title
+                                        level="H2"
+                                        text="Cups"
+                                    />
+                                </content>
+                            </OverflowToolbar>
+                            <columns>
+                                <Column id="IDLiquid">
+                                    <Text text="{i18n>tableNameColumnTitle}" />
+                                </Column>
+                                <Column
+                                    id="TextLiquid"
+                                    hAlign="End"
+                                >
+                                    <Text text="Liquid (to ui5)" />
+                                </Column>
+                            </columns>
+                            <items>
+                                <ColumnListItem>
+                                    <cells>
+                                        <ObjectIdentifier title="{ID}" />
+                                        <Link
+                                            text="{to_Liquid/Name}"
+                                            target="{to_Liquid_ID}"
+                                            press=".navToLiquid"
+                                        />
+                                    </cells>
+                                </ColumnListItem>
+                            </items>
+                        </Table>
+                    </content>
+                </Panel>
+                <Panel
+                    class="sapUiResponsiveMargin"
+                    width="auto"
+                    expanded="true"
+                    headerText="Alcohol"
+                >
+                    <content>
+                        <Table
+                            id="tableAlcohol"
+                            width="auto"
+                            items="{
+                                path: 'has_Alcohol',
+                                sorter: {
+                                    path: 'ID',
+                                    descending: false
+                                }
+                            }"
+                            noDataText="{worklistView>/tableNoDataText}"
+                            busyIndicatorDelay="{worklistView>/tableBusyDelay}"
+                            growing="true"
+                            growingThreshold="5"
+                            growingScrollToLoad="false"
+                        >
+                            <OverflowToolbar>
+                                <content>
+                                    <Title
+                                        level="H2"
+                                        text="Cups"
+                                    />
+                                </content>
+                            </OverflowToolbar>
+                            <columns>
+                                <Column id="IDAlcohol">
+                                    <Text text="{i18n>tableNameColumnTitle}" />
+                                </Column>
+                                <Column
+                                    id="TextAlcohol"
+                                    hAlign="End"
+                                >
+                                    <Text text="Alcohol (to elements)" />
+                                </Column>
+                            </columns>
+                            <items>
+                                <ColumnListItem>
+                                    <cells>
+                                        <ObjectIdentifier title="{ID}" />
+                                        <Link
+                                            text="{to_Alcohol/Name}"
+                                            target="{to_Alcohol_ID}"
+                                            press=".navToAlcohol"
+                                        />
+                                    </cells>
+                                </ColumnListItem>
+                            </items>
+                        </Table>
+                    </content>
+                </Panel>
+            </items>
+        </VBox>
     </semantic:SemanticPage>
-
 </mvc:View>
